Security/02-Ingress-GW-TLS/kiali/kiali-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.icloud2native.com"
    tls:
      httpsRedirect: true # 访问80端口的流量会自动redirect到https
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kiali-credential  # 定义证书的secret
    hosts:
    - "kiali.icloud2native.com"
---
